apps/argo-ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
  name: argo
  namespace: argocd
spec:
  rules:
  - host: argo.dev.myogg.net
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /
        pathType: Prefix
